# vulkan-android-engine

./: README.md  Refs.md  build.gradle  gradle.properties  settings.gradle
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml
gradle/wrapper/: gradle-wrapper.properties
vae/: build.gradle
vae-java/: build.gradle
vae-java-sample/: README.md  build.gradle
vae-java-sample/src/main/: AndroidManifest.xml
vae-java-sample/src/main/java/com/threedgraphicsplus/sample/: FirstFragment.java  MainActivity.java  SecondFragment.java
vae-java-sample/src/main/res/layout/: activity_main.xml  fragment_first.xml
vae-java-sample/src/main/res/navigation/: nav_graph.xml
vae-java-sample/src/main/res/values/: strings.xml
vae-java/src/androidTest/java/com/threedgraphicsplus/vae/java/: ExampleInstrumentedTest.java
vae-java/src/main/cpp/: AndroidMain.cpp  CMakeLists.txt  VulkanMain.cpp  VulkanMain.hpp
vae-java/src/main/cpp/libs/headers/vae/: Renderer.h
vae-java/src/main/java/com/threedgraphicsplus/vae/java/: VulkanSurface.java
vae-java/src/test/java/com/threedgraphicsplus/vae/java/: ExampleUnitTest.java
vae/src/main/: AndroidManifest.xml
vae/src/main/assets/headers/vae/: Device.h  FileUtils.h  Log.hpp  Material.h  Renderer.h  ShaderUtils.h  Texture.h
vae/src/main/cpp/: CMakeLists.txt  CommandPool.cpp  CreateShaderModule.cpp  CreateShaderModule.h  Device.cpp  FileUtils.cpp  GraphicsPipe.cpp  Material.cpp  Object.cpp  Renderer.cpp  SwapChain.cpp  Texture.cpp  VulkanMain.cpp  VulkanMain.hpp
vae/src/main/cpp/headers/: Device.h  FileUtils.h  Renderer.h  Texture.h
vae/src/main/res/values/: strings.xml
vaetest/: .gitignore  build.gradle
vaetest-java/: build.gradle
vaetest-java/src/main/: AndroidManifest.xml
vaetest-java/src/main/cpp/: AndroidMain.cpp  CMakeLists.txt  VulkanMain.cpp
vaetest-java/src/main/cpp/libs/headers/vae/: GraphicsPipe.h  Material.h  Object.h  SwapChain.h
vaetest-java/src/main/java/com/threedgraphicsplus/vaetest_java/: FirstFragment.java  GraphicSurface.java  MainActivity.java  SecondFragment.java
vaetest-java/src/main/res/layout/: activity_main.xml  fragment_first.xml
vaetest-java/src/main/res/navigation/: nav_graph.xml
vaetest-java/src/main/res/values/: themes.xml
vaetest-native/: README.md  build.gradle
vaetest-native/src/main/: AndroidManifest.xml
vaetest-native/src/main/assets/shaders/: shapes.frag  tri.frag  valley-flight.frag  wet-stones.frag
vaetest-native/src/main/cpp/: AndroidMain.cpp  CMakeLists.txt  ShaderToyInput.hpp  VulkanMain.cpp  VulkanMain.hpp
vaetest-native/src/main/cpp/libs/headers/vae/: CommandPool.h  Device.h  FileUtils.h
vaetest-native/src/main/res/values/: strings.xml  themes.xml
vaetest-native/src/main/res/values-night/: themes.xml
vaetest/src/androidTest/java/com/threedgraphicsplus/vaetest/: ExampleInstrumentedTest.java
vaetest/src/main/: AndroidManifest.xml
vaetest/src/main/cpp/: AndroidMain.cpp  CMakeLists.txt  VulkanMain.cpp
vaetest/src/main/res/values/: strings.xml  themes.xml
vaetest/src/main/res/values-night/: themes.xml
vaetest/src/test/java/com/threedgraphicsplus/vaetest/: ExampleUnitTest.java
